--- a/Source/css/search.css
+++ b/Source/css/search.css
@@ -1,47 +1,13 @@
-/* Body styles */
+html,
 body {
-  font-family: Arial, sans-serif;
-  background-color: #22272B;
-  display: flex; /* add this to use flexbox layout */
-  flex-direction: row; /* add this to set the direction of flexbox layout to row */
-}
-
-/* Container styles */
-.container {
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #374148;
-  border-radius: 10px;
-  box-shadow: 2px 10px 2px rgba(0, 0, 0, 0.1);
-  flex: 1; /* add this to make the container take up all remaining space in the row */
-}
-
-.container {
-  display: flex;
-  position: relative;
-  
-  overflow: hidden;
-  box-sizing: border-box;
-  flex-direction: row;
-  background-color: #16191C;
-}
-
-/* Input styles */
-textarea {
-  size: 0vh;
-  padding: 20px;
-  width: 70%;
-  border: none;
-  border-radius: 10px;
-  background-color: #374148;
-  margin-right: 10px;
-  margin-bottom: 80px;
-  font-size: 16px;
-  color: #86909A;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
 }
 
 /* Paragraph styles */
@@ -51,5 +17,157 @@ p {
   line-height: 1.5;
   color: #86909A;
 }
+
+textarea {
+  padding: 20px;
+  width: 70%;
+  position: fixed;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  position: fixed;
+  bottom: 0; 
+  border: none;
+  border-radius: 10px;
+  background-color: #374148;
+  margin-bottom: 60px;
+  font-size: 16px;
+  color: #86909A;
+  resize: none;
+}
+
+.container {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    flex-direction: row;
+    background-color: #16191C;
+}
+
+.container .drawer {
+    display: flex;
+    position: relative;
+    height: 100%;
+    width: 100px;
+    margin: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background: var(--drawer);
+    box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.16), 1px 0px 3px rgba(0, 0, 0, 0.23);
+    box-sizing: border-box;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 2;
+}
+
+.container .drawer .navicon {
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    line-height: 50;
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+    text-align: center;
+    color: var(--text-primary);
+    font-size: 30px;
+    opacity: 0.6;
+    box-sizing: border-box;
+
+    transition: all 0.22s ease;
+}
+
+.container .drawer .navicon:hover {
+    opacity: 1;
+}
+
+.container .drawer .menu {
+    display: block;
+    position: relative;
+    width: 100px;
+    height: auto;
+    box-sizing: border-box;
+}
+
+.container .drawer .menu a {
+    display: block;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: var(--text-primary);
+    font-size: 25px;
+    opacity: 0.6;
+
+    transition: all 0.22s ease;
+}
+
+.container .drawer .menu a.active {
+    opacity: 1;
+    pointer-events: none;
+    cursor: default;
+}
+
+.container .drawer .menu a i {
+    display: block;
+    margin: 0 auto;
+    width: 50px;
+    border-radius: 2px;
+}
+
+.container .drawer .menu a.active i {
+    background: var(--accent-primary);
+    animation: 0.3s ease-out 0s 1 fadeIn;
+}
+
+.container .drawer .menu a:hover {
+    opacity: 1;
+}
+
+.container .drawer .credits {
+    display: block;
+    position: relative;
+    width: 100px;
+    margin: 0;
+    padding: 20px 0;
+    color: var(--text-primary);
+    opacity: 0.4;
+    text-align: center;
+    font-size: 10px;
+    cursor: default;
+}
+
+
+
+button[type="submit"] {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  background-color: #0066CC;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  position: absolute;
+  bottom: 40px;
+  right: 60px;
+}
+
+button[type="submit"]:hover {
+  background-color: #0052A3;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  transform: translateY(-2px);
+}
+
 
 
