--- a/Source/css/landingPage.css
+++ b/Source/css/landingPage.css
@@ -21,7 +21,65 @@ Todo list;
     --accent-primary-transparent: rgba(54, 80, 209, 0);
     --status-red: #EF4836;
     --status-green: #36D744;
+    
 }
+
+textarea {
+    pointer-events: none;
+    padding: 10px;
+    width: 100%;
+    height: 300;
+    border: none;
+    border-radius: 10px;
+    background-color: #374148;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    color: #86909A;
+    outline: none;
+    resize: none;
+  }
+
+  .footer .user .user-icon .username {
+    margin-left: 80px;
+  }
+  
+  /* Add a hover effect */
+  textarea:hover {
+    background-color: #86909A;
+  }
+  
+  /* Add a focus effect */
+  textarea:focus {
+    background-color: #86909A;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4px #007FFF;
+  }
+
+  
+
+button[type="msghistory"] {
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 23px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #86909A;
+    background-color: #374148;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  
+  button[type="msghistory"]:hover {
+    background-color: #374148;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 5);
+    transform: translateY(-3px);
+  }
+  
 
 ::-webkit-scrollbar {
     width: 4px;
@@ -340,7 +398,7 @@ body {
     border-radius: 15px;
     background: var(--status-red);
     top: 50%;
-    left: 100%;
+    left: -100%;
     transform: translateY(-50%);
 }
 
