--- a/Source/css/landingPage.css
+++ b/Source/css/landingPage.css
@@ -556,7 +556,8 @@ body {
     display: inline-block;
     position: relative;
     box-sizing: border-box;
-    margin: 8px 10px;
+    margin: 8px
+     10px;
     padding: 0 10px;
     height: 32px;
     line-height: 32px;
