--- a/Source/css/register.css
+++ b/Source/css/register.css
@@ -1,19 +1,24 @@
 @import url('https://rsms.me/inter/inter-ui.css');
+
 ::selection {
   background: #2D2F36;
 }
+
 ::-webkit-selection {
   background: #2D2F36;
 }
+
 ::-moz-selection {
   background: #2D2F36;
 }
+
 body {
   background: #738adb;
   font-family: 'Inter UI', sans-serif;
   margin: 0;
   padding: 20px;
 }
+
 .page {
   background: #262626;
   display: flex;
@@ -23,6 +28,7 @@ body {
   place-content: center;
   width: calc(100% - 40px);
 }
+
 @media (max-width: 767px) {
   .page {
     height: auto;
@@ -30,12 +36,14 @@ body {
     padding-bottom: 20px;
   }
 }
+
 .container {
   display: flex;
   height: 320px;
   margin: 0 auto;
   width: 640px;
 }
+
 @media (max-width: 767px) {
   .container {
     flex-direction: column;
@@ -43,6 +51,7 @@ body {
     width: 320px;
   }
 }
+
 .left {
   background: #738adb;
   height: calc(100% - 40px);
@@ -50,6 +59,7 @@ body {
   position: relative;
   width: 50%;
 }
+
 @media (max-width: 767px) {
   .left {
     height: 100%;
@@ -58,24 +68,28 @@ body {
     max-height: 270px;
   }
 }
+
 .register {
   font-size: 50px;
   font-weight: 900;
   margin: 50px 40px 40px;
 }
+
 .eula {
   color: black;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1;
   margin: 40px;
 }
+
 .right {
   background: #262626;
-  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 40px 16px rgba(0, 0, 0, 0.22);
   color: #2D2F36;
   position: relative;
   width: 50%;
 }
+
 @media (max-width: 767px) {
   .right {
     flex-shrink: 0;
@@ -84,28 +98,34 @@ body {
     max-height: 350px;
   }
 }
+
 svg {
   position: absolute;
   width: 320px;
 }
+
 path {
   fill: none;
-  stroke: url(#linearGradient);;
+  stroke: url(#linearGradient);
+  ;
   stroke-width: 4;
   stroke-dasharray: 240 1386;
 }
+
 .form {
   margin: 40px;
   position: absolute;
 }
+
 label {
-  color:  #c2c2c5;
+  color: #c2c2c5;
   display: block;
   font-size: 14px;
   height: 16px;
   margin-top: 20px;
   margin-bottom: 5px;
 }
+
 input {
   background: transparent;
   border: 0;
@@ -116,28 +136,32 @@ input {
   outline: none !important;
   width: 100%;
 }
-input::-moz-focus-inner { 
-  border: 0; 
+
+input::-moz-focus-inner {
+  border: 0;
 }
+
 #submitData {
   color: black;
   background: #738adb;
   margin-top: 40px;
   margin-left: 20px;
   height: 40px;
-  width: 200px; 
+  width: 200px;
   transition: color 300ms;
   border-radius: 10px;
-  outline-width:  2px;
+  outline-width: 2px;
   border-color: #2D2F36;
   outline-color: #2D2F36;
 }
+
 #submitData:hover {
   color: #d0d0d2;
   background: #262626;
   outline: none;
   cursor: pointer;
 }
+
 #submit:active {
   color: #d0d0d2;
   background: #262626;
